Quantidade 0 agora disponível!

--- a/views/menu.html
+++ b/views/menu.html
@@ -55,6 +55,7 @@
                         <th>
                             <button type="button" class="btn" title="Adicionar produto" onclick="adicionarProduto()">
                                 <i class="fa-solid fa-plus"></i>
+                                <b>Novo Produto</b>
                             </button>
                         </th>
                     </tr>
