--- a/views/menu.html
+++ b/views/menu.html
@@ -551,6 +551,10 @@
             $('#addProdutoDescription').val(''); 
             $('#addProdutoPrice').val('');
             $('#addProdutoQuantity').val(''); 
+            $('#nomeProdutoObrigatorioAdd').text('*');
+            $('#descProdutoObrigatorioAdd').text('*');
+            $('#precoProdutoObrigatorioAdd').text('*');
+            $('#quantidadeProdutoObrigatorioAdd').text('*');
         }
 
     </script>
