--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
                     success: function(response) {
                         if (response.trim() === 'success') {
                             console.log('Login successful');
-                            window.location.href = 'menu.html';
+                            window.location.href = './views/menu.html';
                         } else {
                             $('#message').html('<div class="alert alert-danger">' + response + '</div>');
                         }
