--- a/views/users.html
+++ b/views/users.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h2 class="text" style="margin-bottom: 30px; margin-left: 6.5%;">Usuário</h2>
         <div class="d-flex justify-content-center">
-            <table id="usersTable" class="table table-striped table-hover" style="width: 90%;">
+            <table id="usersTable" class="table table-striped table-hover" style="width: 100%;">
                 <thead class="table-header-center">
                     <tr>
                         <th>Código</th>
@@ -79,11 +79,11 @@
                     <form id="editUserForm">
                         <span style="color: red; font-size: 10px; margin-bottom: 5px;">* Obrigatório</span>
                         <div class="mb-3">
-                            <label for="editUserName" class="form-label">Nome do Usuário <span id="nomeUsuarioObrigatorio" style="color: red;">*</span></label>
+                            <label for="editUsuarioName" class="form-label">Nome do Usuário <span id="nomeUsuarioObrigatorio" style="color: red;">*</span></label>
                             <input type="text" class="form-control" id="editUsuarioName" name="nmUsuario">
                         </div>
                         <div class="mb-3">
-                            <label for="editUserDescription" class="form-label">Email do Usuário <span id="descUsuarioObrigatorio" style="color: red;">*</span></label>
+                            <label for="editUserEmail" class="form-label">Email do Usuário <span id="descUsuarioObrigatorio" style="color: red;">*</span></label>
                             <input type="email" class="form-control" id="editUserEmail" name="email">
                         </div>
                         <div class="mb-3">
@@ -170,7 +170,21 @@
                 { "data": "cdUsuario", "class": "table-cell-center", "width": "10%" },
                 { "data": "nmUsuario", "class": "table-cell-center", "width": "20%" },
                 { "data": "email", "class": "table-cell-center", "width": "30%" },
-                { "data": "dtCriacao", "class": "table-cell-center", "width": "20%" },
+                { 
+                    "data": "dtCriacao", 
+                    "class": "table-cell-center", 
+                    "width": "20%",
+                    "render": function(data, type, row) {
+                        if (data) {
+                            var date = new Date(data);
+                            var day = ("0" + date.getDate()).slice(-2);
+                            var month = ("0" + (date.getMonth() + 1)).slice(-2);
+                            var year = date.getFullYear();
+                            return `${day}/${month}/${year}`;
+                        }
+                        return data;
+                    }
+                },
                 { 
                     "data": null,
                     "class": "table-cell-center",
@@ -342,7 +356,7 @@
                             return;
                         }
                         $('#editUserId').val(Usuario.cdUsuario);
-                        $('#editUserName').val(Usuario.nmUsuario);
+                        $('#editUsuarioName').val(Usuario.nmUsuario);
                         $('#editUserEmail').val(Usuario.email);
                         $('#editUserPassword').val(Usuario.senha);
 
@@ -373,7 +387,7 @@
 
             let erro = false;
 
-            if ($('#editUserName').val() === '') {
+            if ($('#editUsuarioName').val() === '') {
                 erro = true;
                 $('#nomeUsuarioObrigatorio').text('*Campo obrigatório*');
             } else {
@@ -389,9 +403,9 @@
 
             if ($('#editUserEmail').val() === '') {
                 erro = true;
-                $('#precoUsuarioObrigatorio').text('*Campo obrigatório*');
+                $('#descUsuarioObrigatorio').text('*Campo obrigatório*');
             } else {
-                $('#precoUsuarioObrigatorio').text('');
+                $('#descUsuarioObrigatorio').text('');
                 if($('#editUserEmail').val() < 0){
                     $('#precoUsuarioObrigatorio').text('*Valor incorreto*');
 
