--- a/views/users.html
+++ b/views/users.html
@@ -44,7 +44,7 @@
 
     <div class="container">
         <h2 class="text" style="margin-bottom: 30px; margin-left: 6.5%;">Usuário</h2>
-        <div class="d-flex justify-content-center">
+        <div class="justify-content-center">
             <table id="usersTable" class="table table-striped table-hover" style="width: 100%;">
                 <thead class="table-header-center">
                     <tr>
@@ -248,7 +248,7 @@
               if (result.isConfirmed) {
                   $.ajax({
                       type: 'POST',
-                      url: '../php/excluir_Usuarios.php',
+                      url: '../php/excluir_usuarios.php',
                       data: { cdUsuario: cdUsuario }, 
                       success: function(response) {
                           if (response.trim() === 'success') {
@@ -425,7 +425,7 @@
             if (!erro) {
                 $.ajax({
                     type: 'POST',
-                    url: '../php/editar_Usuarios.php',
+                    url: '../php/editar_usuarios.php',
                     data: $(this).serialize(),
                     success: function(response) {
                         if (response.trim() === 'success') {
@@ -503,7 +503,7 @@
             if (!erro) {
                 $.ajax({
                     type: 'POST',
-                    url: '../php/adicionar_Usuarios.php',
+                    url: '../php/adicionar_usuarios.php',
                     data: $(this).serialize(),
                     success: function(response) {
                         if (response.trim() === 'success') {
