--- a/views/users.html
+++ b/views/users.html
@@ -43,7 +43,7 @@
     </header>
 
     <div class="container">
-        <h2 class="text" style="margin-bottom: 30px; margin-left: 6.5%;">Usuário</h2>
+        <h2 class="text" style="margin-bottom: 30px;">Usuário</h2>
         <div class="justify-content-center">
             <table id="usersTable" class="table table-striped table-hover" style="width: 100%;">
                 <thead class="table-header-center">
